amend logging conf.

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 ### Set Log Levels - ### - OFF, FATAL, ERROR, WARN, INFO, DEBUG, TRACE or ALL
 log4j.rootLogger=INFO, stdout
-#log4j.logger.com.altoros=ERROR
+#log4j.logger.com.example.web=ERROR
 
 #change INFO to DEBUG to view full log
 #log4j.appender.stdout.Threshold=INFO
